@@ -261,6 +261,7 @@ my $extended_requires = {
                 'st::api::base'                            => 0,
                 'st::api::lims'                            => 0,
                 'WTSI::DNAP::Warehouse::Schema'            => 0,
+                'WTSI::NPG::iRODS'                         => 0,
 };
 
 my $build_requires = {
