@@ -1,5 +1,7 @@
 LIST OF CHANGES FOR NPG-QC PACKAGE
 
+ - make building the iRODS handle of npg_qc::autoqc::checks::genotype
+   lazy to avoid calling baton until required at runtime
  - translation from a database composition representation to the
      npg_tracking::glossary::composition type object
  - db query for compisition-based tables should include a condition
